k3s/generated_manifests/element/Service-element-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: element.doma.lol
    external-dns.alpha.kubernetes.io/target: homelab.boreal-scala.ts.net
  name: element-tailscale
  namespace: element
spec:
  clusterIP: None
  type: ClusterIP
