k3s/generated_manifests/element/Service-element.yaml
apiVersion: v1
kind: Service
metadata:
  name: element
  namespace: element
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: element
  type: ClusterIP
