k3s/generated_manifests/element/Ingress-element.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: element
  namespace: element
spec:
  ingressClassName: traefik
  rules:
    - host: element.doma.lol
